data/derived/comb/progs/unify/prog4646.ml.out
Characters 110-126:
  let seen' = if List.mem(seen h) then [h]@seen' in
                 ^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> bool
       but an expression was expected of type bool
